# sEEGPrep

./: .gitignore  MNE.ipynb  Noisy_channels.ipynb  PLI_code.ipynb  Position.ipynb  README.md  position.py  requirements.txt
Results/: test.edf  test.tsv
clean_seeg/: __init__.py  clean_PLI.py  clean_autoreject.py  clean_drifts.py  clean_flatlines.py  clean_seeg.py  data_manager.py  pyproject.toml  requirements.txt  rereference.py  utils.py
clean_seeg/.ipynb_checkpoints/: __init__-checkpoint.py  clean_PLI-checkpoint.py  clean_seeg-checkpoint.py  utils-checkpoint.py
clean_seeg/autoreject/: utils.py
clean_seeg/clean_seeg/: __init__.py  clean_PLI.py  clean_autoreject.py  clean_drifts.py  clean_flatlines.py  clean_seeg.py  data_manager.py  edf_utils.py  utils.py  val_utils.py
jobs/: run.py.6848176.job
notebooks/: Detrend_comparison.ipynb  Figures.ipynb  Matlab_comparison.ipynb  Noisy_channels.ipynb  PLI_code.ipynb  QC.ipynb  test.html  utils.py
notebooks/matlab_code/: PLI_Test.m  bids_parsing.m  preprocessing.m  trialfun_annotation.m
seegprep/: README.rst  pipeline_description.json  setup.py
seegprep/config/: snakebids.yml
seegprep/docs/: conf.py  requirements.txt
seegprep/docs/getting_started/: installation.rst
seegprep/docs/usage/: app_cli.rst
seegprep/resources/: mapping_snsx_clinical.tsv
seegprep/resources/html_template/: app.css  normalize.css  template.html
seegprep/workflow/: Snakefile
seegprep/workflow/rules/: PLI_reject.smk  all_rule.smk  coords_to_surf.smk  downsample.smk  epoch_extraction.smk  filter.smk  fmriprep.smk  merge_files.smk  (+12 more)
(+18 files in other folders)
