[tool.poetry]
name = "clean_seeg"
version = "0.1.0"
description = "Preprocessing tool for eeg/seeg/ecog data"
authors = ["Mauricio Cespedes Tenorio <mcespedes99@gmail.com>"]
license = "Apache license 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
snakebids = "^0.7.1"
pybids = "^0.15.6"
numpy = "1.24.*"
pandas = "^2.0.0"
scipy = "^1.10.1"
nibabel = "^5.1"
mne = "^1.3.0"
matplotlib = "^3.7"
SimpleITK = "^2.2.1"
scikit-image = "^0.21"
joblib = "^1.2"
h5io = "^0.1.7"
scikit-learn = "^1.3.0"
pyedflib = "<=0.1.30"
pulp = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
